# consortium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
lab/: README.md
lab/decisions/: 0001-owned-types-at-async-boundaries.md  README.md
lab/journal/: 2026-05-15-claude-seed-and-typed-models.md  2026-05-15-gemini-seed-and-extraction-checkpoint.md  2026-05-15-initial-repo-read-and-planning.md  2026-05-15-m3-multi-provider-embedding.md  2026-05-15-m4-judge-layer.md  2026-05-15-m5a-two-phase-orchestrator.md  2026-05-15-m6a-dataset-builder-and-jsonl-pipeline.md  2026-05-15-openai-seed-shape.md  2026-05-15-stabilization-secrets-and-backon.md  2026-05-16-embedder-mixed-dimension-hardening.md  2026-05-16-m5b-parallel-judge-fanout.md  2026-05-16-m5c-streaming-phase-events.md  2026-05-16-m6b-bounded-per-prompt-parallelism.md  2026-05-16-m6c-embedder-auto-chunking.md  2026-05-16-m7-remaining-providers.md  README.md
lab/plans/: 2026-05-15-implementation-plan.md  README.md
lab/templates/: README.md  decision-template.md  journal-template.md  plan-template.md
src/: lib.rs
src/ai_client_apis/: mod.rs  shared.rs
src/ai_client_apis/claude/: mod.rs
src/ai_client_apis/cohere/: embeddings.rs
src/ai_client_apis/deepseek/: mod.rs
src/ai_client_apis/gemini/: mod.rs
src/ai_client_apis/kimik2/: mod.rs
src/ai_client_apis/llama/: mod.rs
src/ai_client_apis/openai/: embeddings.rs  mod.rs
src/ai_client_apis/qwen/: mod.rs
src/dataset/: mod.rs
src/diversification/: mod.rs
src/embeddings/: mod.rs
src/judge/: mod.rs
src/orchestrator/: mod.rs
