[package]
name = "consortium"
description = "Evergreen best-of-best LLM generations at your fingertips"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/KenAKAFrosty/consortium"
keywords = ["ai", "sdk", "llm", "training-data", "fine-tune"]
categories = ["template-engine", "api-bindings", "text-processing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytes = "1"
secrecy = "0.10"
backon = "1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
